syntax = "proto3";
import "Sitko/Core/Grpc/ApiRequestInfo.proto";
import "Sitko/Core/Grpc/ApiResponseInfo.proto";
package Sitko.Core.Grpc.Server.Tests;

message TestRequest {
    Sitko.Core.Grpc.ApiRequestInfo RequestInfo = 1;
}

message TestResponse {
    Sitko.Core.Grpc.ApiResponseInfo ResponseInfo = 1;
}

service TestService {
    rpc Request(TestRequest) returns (TestResponse);
}
